seperated css done :p

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-        <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+        <link rel="stylesheet" href="css/base/base.css">
+        <link rel="stylesheet" href="css/base/typography.css">
+        <link rel="stylesheet" href="css/component/header.css">
+        <link rel="stylesheet" href="css/component/btn.css">
+        <link rel="stylesheet" href="css/base/animation.css">
 
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
