image composition added, about section started :v

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         <link rel="stylesheet" href="css/base/base.css">
+
         <link rel="stylesheet" href="css/base/typography.css">
         <link rel="stylesheet" href="css/component/header.css">
         <link rel="stylesheet" href="css/component/btn.css">
+
+        <link rel="stylesheet" href="css/component/composition.css">
+        <link rel="stylesheet" href="css/base/grid.css">
         <link rel="stylesheet" href="css/base/animation.css">
 
         <title>Natours | Exciting tours for adventurous people</title>
@@ -23,7 +27,37 @@
                     <span class="heading-primary--main">OUTDOORS</span>
                     <span class="heading-primary--secondary">Is Where Life Happens</span>
                 </h1>
-                <a href="#" class="btn btn--white">Discover our tours</a>
+
+                <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            </div>
+        </div>
+        <div class="section_about">
+            <div class="">
+                <h2 class="heading-secondary">EXCITING TOURS FOR ADVENTUROUS PEOPLE</h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    <h3 class="heading-tertiary">YOU'RE GOING TO FALL IN LOVE WITH NATURE</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum
+                        sapiente aspernatur libero repellat quis consequatur ducimus quam
+                         nisi exercitationem omnis earum qui.
+                     </p>
+
+                    <h3 class="heading-tertiary">LIVE ADVENTURES LIKE YOU NEVER HAVE BEFORE</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Asperiores nulla deserunt voluptatum nam.
+                    </p>
+                </div>
+                <div class="col-1-of-2">
+                    <div class="composition">
+                        <img class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg" alt="pic 1">
+                        <img class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg" alt="pic 2">
+                        <img class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg" alt="pic 3">
+                    </div>
+                </div>
             </div>
         </div>
     </body>
