--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         <link rel="stylesheet" href="css/base/base.css">
+        <link rel="stylesheet" href="css/sections/sections.css">
 
         <link rel="stylesheet" href="css/base/typography.css">
         <link rel="stylesheet" href="css/component/header.css">
@@ -15,6 +16,7 @@
         <link rel="stylesheet" href="css/base/grid.css">
         <link rel="stylesheet" href="css/base/animation.css">
 
+        <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,700" rel="stylesheet">
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
