--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/component/header.css">
         <link rel="stylesheet" href="css/component/btn.css">
 
+        <link rel="stylesheet" href="css/base/helper.css">
         <link rel="stylesheet" href="css/component/composition.css">
         <link rel="stylesheet" href="css/base/grid.css">
         <link rel="stylesheet" href="css/base/animation.css">
@@ -34,24 +35,25 @@
             </div>
         </div>
         <div class="section_about">
-            <div class="">
+            <div class="h-text-center h-margin-bottom-large">
                 <h2 class="heading-secondary">EXCITING TOURS FOR ADVENTUROUS PEOPLE</h2>
             </div>
 
             <div class="row">
                 <div class="col-1-of-2">
-                    <h3 class="heading-tertiary">YOU'RE GOING TO FALL IN LOVE WITH NATURE</h3>
-                    <p class="paragraph">
+                    <h3 class="heading-tertiary h-margin-bottom-small">YOU'RE GOING TO FALL IN LOVE WITH NATURE</h3>
+                    <p class="paragraph h-margin-bottom-small">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum
                         sapiente aspernatur libero repellat quis consequatur ducimus quam
                          nisi exercitationem omnis earum qui.
                      </p>
 
-                    <h3 class="heading-tertiary">LIVE ADVENTURES LIKE YOU NEVER HAVE BEFORE</h3>
-                    <p class="paragraph">
+                    <h3 class="heading-tertiary h-margin-bottom-small">LIVE ADVENTURES LIKE YOU NEVER HAVE BEFORE</h3>
+                    <p class="paragraph h-margin-bottom-medium">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Asperiores nulla deserunt voluptatum nam.
                     </p>
+                    <a href="#" class="btn__text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
